# VisVid

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Doxyfile  Doxyfile.in  Jenkinsfile  MANIFEST.in  README.md  bitbucket-pipelines.yml  build.cmake  conanfile.py  docker-compose.yml  license.txt  plugins.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: main.yml
applications/createVisuals/: generator.c  generator.h  textures.h  videoAndVisualPlayer.c  videoAndVisualPlayer.h
ci/dockerfiles/: clang-tidy  jenkins-main
ci/dockerfiles/conan/: Dockerfile  dockerfile
ci/dockerfiles/installed/Conan/: Dockerfile
ci/dockerfiles/jenkins/: dockerfile
ci/dockerfiles/linux/20.04/: Dockerfile
ci/dockerfiles/linux/2004/: Dockerfile
ci/dockerfiles/linux/clang/: Dockerfile  packages.txt
ci/dockerfiles/linux/tox/: Dockerfile  apt-packages.txt
ci/dockerfiles/python/linux/: Dockerfile
ci/dockerfiles/python/shared/: apt-packages.txt  requirements-ci.txt
ci/dockerfiles/sonar-scanner/: Dockerfile
ci/dockerfiles/static_analysis/clang_tidy/: Dockerfile  packages.txt
ci/dockerfiles/static_analysis/cppcheck/: Dockerfile  packages.txt
ci/dockerfiles/windows/: Dockerfile  startup.bat
ci/dockerfiles/windows/chocolatey/: packages.config  visual_studio.config
ci/dockerfiles/windows/nuget/: packages.config
ci/jenkins/: Dockerfile
cmake/: CPackConfig.cmake  FindFFMPEG.cmake  Findffmpeg.cmake  VisVidConfig.cmake.in  buildDocumentation.cmake  package.cmake
createVisuals/: ffmpeg_converter.h  main.c  runPlayers.h  textures.c  videoDecoder.c
docs/: mainpage.dox
examples/: CMakeLists.txt  make_image.c
examples/make_image/: CMakeLists.txt  make_image.c
examples/pyvisvid/: CMakeLists.txt
examples/pyvisvid/pyvisvid/: Visualizer.cpp  Visualizer.h  __init__.py  run.py
examples/pyvisvid/tests/: test_extension.py
examples/shared/: decode.c  decode.h  pgm.c  pgm.h
lib/: CMakeLists.txt  utils.c  visBuffer.c  visBuffer.h  visDisplay.c  visDisplay.h  visFrame.c  visFrame.h  visImageWriter.c  visImageWriter.h  visResult.c  visResult.h  visTypes.h  visVersion.c  visVersion.h.in  visView.c  visView.h  visVisualization.c  visVisualization.h  visvid.h
src/: CMakeLists.txt  createVisual.c  ffmpeg_converter.c  filedialog.c  filedialog.h  generators.c  generators.h  gui.c  gui.h  main.c  ramp.c  runPlayers.h  simpleVideoPlayer.c  simpleVideoPlayerUtils.c  simpleVideoPlayerUtils.h  videoAndVisualPlayer.c  videoAndVisualPlayer.h  videoDecoder.c  videoDecoder.h
src/applications/: CMakeLists.txt
src/applications/createVisuals/: CMakeLists.txt  ffmpeg_converter.c  ffmpeg_converter.h  filedialog.c  generator.c  gui.c  gui.h  main.c  ramp.c  ramp.h  simpleVideoPlayer.c  simpleVideoPlayer.h  simpleVideoPlayerUtils.c  simpleVideoPlayerUtils.h  videoAndVisualPlayer.c  videoAndVisualPlayer.h  videoDecoder.c  videoDecoder.h
src/applications/pyvisvid/: CMakeLists.txt
src/applications/pyvisvid/pyvisvid/: AbsPgmStrategy.h  Visualizer.cpp  Visualizer.h  __init__.py  __main__.py  generate.cpp  generate.h  run.py  utils.cpp  utils.h  visvid.pyi  visvid_exceptions.cpp  visvid_exceptions.h  visvid_extension.cpp  wrapper.cpp
src/thirdpartylibs/: CMakeLists.txt
src/visvid/: CMakeLists.txt  utils.c  visBuffer.c  visBuffer.h  visFrame.c  visFrame.h  visImageWriter.c  visImageWriter.h  visResult.c  visResult.h  visTypes.h  visUtils.h  visVersion.c  visVersion.h.in  visView.c  visView.h  visVisualization.c  visVisualization.h
src/visvid/include/visvid/: utils.h  visvid.h
swig/: swig.cmake  swigPython.cmake  visBuffer.i  visFrame.i  visResult.i  visVid.i  visView.i  visVisualization.i
tests/: CMakeLists.txt  test-main.cpp  test-visBuffer.cpp  test-visFrame.cpp  test-visImageWriter.cpp  test-visResult.cpp  test-visView.cpp  test-visVisualization.cpp
tests/internal/: CMakeLists.txt  test-internal-visFrame.cpp  test-internal-visImageWriter.cpp  test-internal-visResult.cpp  test-internal-visView.cpp  test-internal-visVisualization.cpp  test-internal-visbuffer.cpp
tests/publicAPI/: CMakeLists.txt  test-visBuffer.cpp  test-visFrame.cpp  test-visResult.cpp  test-visView.cpp
tests/pyvisvid/: CMakeLists.txt  test_extension.py  test_pyvisvid.cpp  test_run.py
tests/src/: CMakeLists.txt  TESTvisBuffer.cpp  TESTvisDisplay.cpp  TESTvisFrame.cpp  TESTvisImageWriter.cpp  TESTvisResult.cpp  TESTvisVersion.cpp  TESTvisView.cpp  TESTvisVisualization.cpp
