[build-system]
requires = ["setuptools>=40.8.0", "wheel", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
include = ["src/*"]
[tool.coverage.paths]
source = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests/pyvisvid"
]
junit_family="xunit1"

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "missing-module-docstring",
    "missing-function-docstring"
]
extension-pkg-whitelist=[
    "pyvisvid.visvid"
    ]