    add_library(NOC_FILE_DIALOG INTERFACE)
    target_include_directories(NOC_FILE_DIALOG INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/noc")
    target_compile_definitions(NOC_FILE_DIALOG INTERFACE NOC_FILE_DIALOG_IMPLEMENTATION)
    if(APPLE)
        find_library(cocoa_lib Cocoa REQUIRED)
        target_compile_definitions(NOC_FILE_DIALOG INTERFACE NOC_FILE_DIALOG_OSX)
        target_compile_options(NOC_FILE_DIALOG INTERFACE "-ObjC")
        target_link_libraries(NOC_FILE_DIALOG INTERFACE ${cocoa_lib})
    elseif(WIN32)
        target_compile_definitions(NOC_FILE_DIALOG INTERFACE NOC_FILE_DIALOG_WIN32)
    elseif(UNIX)
        message(STATUS "Identified OS: Unix, Using GTK2")
        find_package(GTK2 REQUIRED gtk)
        target_compile_definitions(NOC_FILE_DIALOG INTERFACE NOC_FILE_DIALOG_GTK)
        target_include_directories(NOC_FILE_DIALOG INTERFACE ${GTK2_INCLUDE_DIRS})
        target_link_libraries(NOC_FILE_DIALOG INTERFACE ${GTK2_LIBRARIES})
    else()
        message(FATAL_ERROR "Cannot use NOC file dialog library due to unsupported system")
    endif()